--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"browserslist": "> 0.25%, not dead",
 	"devDependencies": {
 		"@babel/core": "^7.12.3",
+		"@babel/plugin-proposal-class-properties": "^7.12.1",
 		"@babel/preset-env": "^7.12.1",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.2.1",
@@ -42,6 +43,7 @@
 		"webpack-dev-server": "^3.10.3"
 	},
 	"dependencies": {
-		"@babel/polyfill": "^7.12.1"
+		"@babel/polyfill": "^7.12.1",
+		"normalize.css": "^8.0.1"
 	}
 }
