--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -5,12 +5,20 @@
 		"browser": true,
 		"node": true
 	},
+	"rules": {
+		"semi": "off",
+		"linebreak-style": "off",
+		"require-jsdoc": "off",
+		"no-tabs": "off",
+		"indent": "off",
+		"object-curly-spacing": "off",
+		"comma-dangle": "off",
+		"eol-last": "off",
+		"arrow-parens": "off",
+		"operator-linebreak": "off"
+	},
 	"extends": [
 		"eslint:recommended",
 		"google"
-	],
-	"rules": {
-		"semi": "off",
-		"linebreak-style": "off"
-	}
+	]
 }
